- Trabalhando no relatório de prazos de desenvolvimento de funcionalidades.

--- a/apps/common/css/css.css
+++ b/apps/common/css/css.css
@@ -8,6 +8,12 @@
 	color: #777;
 	background-color: transparent;
 }
+.nav-sidebar .nav-item>.nav-link{
+	padding: .5rem 0.5rem;
+}
+.nav-sidebar>.nav-item .nav-icon{
+	margin-right: 0;
+}
 .sidebar-mini .nav-sidebar{
 	border-bottom: 0;
 }
