--- a/apps/view/rel_orcamento_manutencao_tabela_linha.html
+++ b/apps/view/rel_orcamento_manutencao_tabela_linha.html
@@ -24,7 +24,7 @@
 			</td>
 			<td class="modulo" rowspan="{{:~array.length}}">{{>~root.modulo}}</td>
 			<td class="funcionalidade" rowspan="{{:~array.length}}">{{>~root.funcionalidade}}</td>
-			<td class="text-center align-middle">
+			<td class="acoes_componente text-center align-middle">
 				<button type="button" title="Excluir componente desta funcionalidade" class="btn btn-danger btn-sm"
 					onclick="orcamentoManutencao.excluirComponenteFuncionalidade(this)">
 					<i class="fa fa-times"></i>
@@ -39,7 +39,7 @@
 		</tr>
 	{{else}}
 		<tr data-id-funcionalidade="{{>~root.id}}" data-id-componente="{{>id}}">
-			<td class="text-center align-middle">
+			<td class="acoes_funcionalidade text-center align-middle">
 				<button type="button" title="Excluir componente desta funcionalidade" class="btn btn-danger btn-sm"
 					onclick="orcamentoManutencao.excluirComponenteFuncionalidade(this)">
 					<i class="fa fa-times"></i>
