- Refatorado relatório de Orçamento de Manutenção de Sistemas, de modo a mover todos os campos de parâmetros e personalização para dropdowns flutuantes, adicionar campos e coluna "Detalhes" na tabela e nos subformulários onde o usuário pode detalhar o que será feito em cada componente de funcionalidade, permitir a definição de templates de funcionalidades na aba de "Inclusões" (automaticamente adicionando componentes para CRUDs e relatórios) e resgatar a busca por nome de funcionalidade / componente na aba "Alterações / Exclusões"; - Efetuadas diversas correções de HTML, JS e CSS, de modo a tornar o sistema 100% responsivo.

--- a/apps/view/rel_orcamento_manutencao_tabela_linha.html
+++ b/apps/view/rel_orcamento_manutencao_tabela_linha.html
@@ -36,6 +36,7 @@
 			<td class="valor_pf_ajustado_formatado">{{>valor_pf_ajustado}}</td>
 			<td class="tempo_formatado">{{>tempo}}</td>
 			<td class="custo_formatado">{{>custo}}</td>
+			<td class="detalhes">{{>detalhes}}</td>
 		</tr>
 	{{else}}
 		<tr data-id-funcionalidade="{{>~root.id}}" data-id-componente="{{>id}}">
@@ -58,6 +59,7 @@
 			<td class="valor_pf_ajustado_formatado">{{>valor_pf_ajustado}}</td>
 			<td class="tempo_formatado">{{>tempo}}</td>
 			<td class="custo_formatado">{{>custo}}</td>
+			<td class="detalhes">{{>detalhes}}</td>
 		</tr>
 	{{/if}}
 {{/for}}
