--- a/apps/common/css/css.css
+++ b/apps/common/css/css.css
@@ -166,6 +166,34 @@ div.cpf_dashboard_logo{
 .tabelaaberta table.dataTable{
 	width: 100% !important;
 }
+.tabelaaberta div.dataTables_length{
+	width: 100px;
+	display: inline-block;
+}
+.tabelaaberta div.conteiner_dataTables_filter{
+	float: right;
+}
+.tabelaaberta div.dataTables_length .select2-container .select2-selection--single{
+	height: 38px;
+}
+.tabelaaberta div.dataTables_length .select2-container .select2-selection__rendered{
+	margin-top: -2px;
+}
+.tabelaaberta div.dataTables_length .select2-container .select2-selection__arrow{
+	top: 4px;
+}
+.tabelaaberta div.dataTables_length .has-float-label,
+.tabelaaberta div.dataTables_filter .with-float-label{
+	margin-bottom: 0;
+}
+.tabelaaberta div.dataTables_filter input[type='text']{
+	line-height: 1.3;
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+.tabelaaberta div.dataTables_filter label.has-float-label span{
+	left: 1.25rem;
+}
 /* Novas estilizações de campos múltiplos */
 div.campo_multiplo table.conteiner{
 	border-collapse: collapse;
@@ -218,8 +246,8 @@ div.fileuploader div.conteiner_input{
 }
 div.fileuploader div.titulo{
 	text-align: center;
-	padding: 2px 0 9px 0;
-	background: #2A3F54;
+	padding: 2px 0 3px 0;
+	background: #343a40;
 }
 div.fileuploader div.conteudo{
 	padding: 3px;
@@ -524,62 +552,12 @@ ul.nav-pills + div.tab-content{
 .custom-control-label{
 	font-weight: normal !important;
 }
-/* Estilizações do menu de checkboxes */
-div.checkbox-menu-search input.form-control{
-	border-bottom-left-radius: 0;
+/* Campos de formulário agrupados */
+div.input-group.with-float-label div.input-group-prepend{
+	margin-right: -27px;
 }
-div.checkbox-menu-search span.input-group-text{
-	border-bottom-right-radius: 0;
-}
-div.checkbox-menu-parent{
-	max-height: 290px;
-	overflow-y: scroll;
-	border-bottom: 1px solid #999;
-	border-bottom-left-radius: 4px;
-}
-label.checkbox-menu{
-	display: block;
-	border: 1px solid #aaa;
-	border-bottom: 0;
-	margin-bottom: 0;
-	padding: 10px;
-	cursor: pointer;
-	font-weight: normal;
-    background: rgb(244,244,244);
-}
-label.checkbox-menu:first-child,
-label.checkbox-menu:first-of-type{
-	border-radius: 3px 3px 0 0;
-}
-label.checkbox-menu:last-child,
-label.checkbox-menu:last-of-type{
-	border-radius: 0 0 3px 3px;
-	border-bottom: 1px solid #aaa;
-}
-label.checkbox-menu label{
-	padding: 0;
-	font-size: 0;
-}
-label.checkbox-menu span.checkbox-label-block{
-	display: inline-block;
-	vertical-align: middle;
-	width: 95%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-label.checkbox-menu:hover, label.checkbox-menu:focus{
-    background: rgb(232,232,232);
-}
-label.checkbox-menu:active{
-	color: white;
-	text-shadow: 0px 1px 0px #444;
-    background: #007bff;
-}
-div.checkbox-menu-footer{
-	border: 1px solid #aaa;
-	border-top: 0;
-	border-radius: 0 0 3px 3px;
+div.modal-body div.input-group.with-float-label div.input-group-prepend{
+	margin-right: -21px;
 }
 /* Estilizações do modal de geração de arquivos XLS */
 table.geracao_xls{
@@ -692,8 +670,16 @@ div.componente_inclusao_funcionalidade_orcamento_manutencao>div[class^="col"],
 div.componente_calculadora_pf>div[class^="col"]{
 	padding: 5px;
 }
+div.componente_inclusao_funcionalidade_orcamento_manutencao textarea[name^='componentes']{
+	height: 55px;
+	min-height: 38px;
+}
 #form_alterar_excluir_funcionalidades table.dataTable tr.even td{
     background: rgba(0,0,0,.075);
+}
+#form_alterar_excluir_funcionalidades textarea[name^='componentes']{
+	height: 32px;
+	min-height: 32px;
 }
 /* Estilizações da tabela de listagem, no relatório de contagem de pontos*/
 #tabela_contagem_pontos>thead>tr>th,
@@ -702,7 +688,7 @@ div.componente_calculadora_pf>div[class^="col"]{
 	background-color: #fafafa;
 }
 /* Estilizações da tabela de listagem, no relatório de Orçamento de Manutenção */
-#tabela_orcamento_manutencao table>thead>tr>th,
-#tabela_orcamento_manutencao table>tfoot>tr>th{
+#tabela_orcamento_manutencao>thead>tr>th,
+#tabela_orcamento_manutencao>tfoot>tr>th{
 	background-color: #fafafa;
 }
