- Adicionado CRUD de Feriados, tanto automáticos pela biblioteca PHP "yasumi", como manuais na tabela "cpf.feriados", a serem utilizados no Relatório de Cronograma de Desenvolvimento; - Adicionado Relatório de Cronograma de Desenvolvimento, com o propósito de determinar a data de início e fim de cada atividade de desenvolvimento de um sistema, levando em consideração finais de semana e feriados; - Adicionados componentes "Boostrap Daterangepicker" e "Bootstrap Timepicker", a serem utilizados em campos de data, hora e invervalos; - Adicionado tema escuro na aplicação, gerado a partir do app "Night Eye Dark CSS Generator"; - Corrigidos bugs menores de estilização.

--- a/apps/common/css/css-xs.css
+++ b/apps/common/css/css-xs.css
@@ -4,6 +4,10 @@
 		white-space: nowrap;
 		overflow: hidden;
 	}
+	div.card.card-padding-reduzido-xs div.card-header,
+	div.card.card-padding-reduzido-xs div.card-body{
+		padding: 10px;
+	}
 	/* Campos de formulário agrupados */
 	div.input-group.with-float-label div.input-group-prepend,
 	div.modal-body div.input-group.with-float-label div.input-group-prepend{
@@ -82,5 +86,12 @@
 	}
 	div.acoes_mobile a.mobile-danger{
 		background-color: #f2dede;
+	}
+	/* Componentes de funcionalidades, no formulário de cadastro de funcionalidades */
+	div.componente_funcionalidade{
+		border: 1px solid #dee2e6;
+	}
+	div.componente_funcionalidade>div[class^="col"]{
+		border-color: transparent;
 	}
 }
